# neurotrade-signal-api-mcp

./: .gitignore  .mcp.json.example  LICENSE  README.md  pyproject.toml
mcp_server/: neurotrade_mcp.py
